FIX: minor problems